# experiments

./: README.md  experiments-cli.yml
electron-sqlboss-commands/: package-lock.json  package.json
electron-sqlboss-commands/src/: initialize-application-window.js
electron-sqlboss-commands/static/: index.html  index.js
experiments-cli/: go.mod  go.sum  main.go
experiments-cli/cmd/: add.go  build.go  namegen.go  root.go
experiments-cli/namegen/: namegen.go
experiments/benign-cactus/: README.md  experiment.yml
experiments/blurred-heart/: README.md  docker-compose.yml  experiment.yml
experiments/bookish-mice/: README.md  docker-compose.yml  experiment.yml
experiments/clueless-brass/: README.md  docker-compose.yml  experiment.yml  package-lock.json  package.json
experiments/daring-sherpa/: README.md  datastores.mjs  db.js  db.mjs  docker-compose.yml  experiment.yml  index.js  index.mjs  secrets.js  secrets.mjs  startApp.mjs
experiments/dark-fog/: README.md  experiment.yml  package-lock.json  package.json
experiments/electron-sqlboss-commands/: README.md
experiments/go-remote-clipboard/: .gitignore  Dockerfile  README.md  pbcopy  pbpaste
experiments/rust-clipboard/: Cargo.toml  README.md
go-remote-clipboard/: Makefile  bubba.go  docker-compose.yml
js-keymaps/: docker-compose.yml
p5js-game-of-life/: README.md
react-query-runner/: README.md  index.html  main.js  query_statement_editor.mjs  query_statements.mjs  sql_editor.js  styles.css
tailwind-website/: package-lock.json  tailwind.config.js
templates/: experiment-readme.md  readme.md
(+126 files in other folders)
