[package]
name = "clipboard"
description = "Copy/Paste stuff"
version = "0.1.0"
authors = ["Zachary Rankin <rankin.zachary@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "2.0"
structopt = "0.3.14"
failure = "0.1.8"
exitfailure = "0.5.1"
